[package]
name = "json-command-server"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
path = "examples/test-server.rs"
name = "test-server"

[[example]]
path = "examples/test-client.rs"
name = "test-client"

[dev-dependencies]
ctrlc = "3.1"